# coding-agent

./: .actrc  .cursorrules  .runsettings  .spectral.yaml  ADMIN-FEATURES-COMPLETE-DELIVERY.md  ADMIN-FEATURES-IMPLEMENTATION-SUMMARY.md  CodingAgent.sln  Directory.Build.props  E2E-ADMIN-TESTS-QUICK-START.md  E2E-ADMIN-TESTS-SUMMARY.md  E2E-TEST-FINAL-STATUS.md  Makefile  PHASE-1-4-COMPLETION-STATUS.md  QA-DELIVERABLES-ADMIN-E2E.md  README.md  cleanup-test-users.ps1  package-lock.json  seed-admin-user.ps1  setup-network-access.ps1  test-model-features.ps1  test-model-features.sh
.cursor/: ba.md  context.md  dev.md  ops.md  pm.md  qa.md  techlead.md  workflows.md
.github/: copilot-instructions.md
.trunk/: trunk.yaml
docs/: 00-OVERVIEW.md  01-SERVICE-CATALOG.md  02-API-CONTRACTS.md  USE-CASES.md  (+29 more)
src/Services/MLClassifier/ml_classifier_service/: .dockerignore  .gitignore  HYBRID_CLASSIFICATION_API.md  ML_CLASSIFIER_IMPLEMENTATION.md  README.md  example_ml_usage.py  main.py  pyproject.toml  requirements.txt
src/Services/MLClassifier/ml_classifier_service/.test_venv/: pyvenv.cfg
src/Services/MLClassifier/ml_classifier_service/api/: rate_limiter.py
src/Services/MLClassifier/ml_classifier_service/api/routes/: classification.py  health.py  training.py
src/Services/MLClassifier/ml_classifier_service/api/schemas/: classification.py
src/Services/MLClassifier/ml_classifier_service/domain/classifiers/: heuristic.py  hybrid.py  llm_classifier.py  ml_classifier.py
src/Services/MLClassifier/ml_classifier_service/infrastructure/: cache.py  database.py  messaging.py
src/Services/MLClassifier/ml_classifier_service/infrastructure/ml/: __init__.py  feature_extractor.py  model_loader.py
src/Services/MLClassifier/ml_classifier_service/models/: README.md  model_v1.0.0-dummy.json  model_v1.0.0-dummy_metadata.json  vectorizer_v1.0.0-dummy.pkl
src/Services/MLClassifier/ml_classifier_service/tests/integration/: test_api.py  test_hybrid_classifier.py
src/Services/MLClassifier/ml_classifier_service/tests/unit/: test_feature_extractor.py  test_heuristic_classifier.py  test_llm_classifier.py  test_ml_classifier.py  test_model_loader.py
src/Services/MLClassifier/ml_classifier_service/tests/unit/infrastructure/: test_database.py  test_messaging.py
(+584 files in other folders)
